--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,15 @@
     <string name="home">Home</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_in">Sign In</string>
+    <string name="email">Email</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="or">or</string>
+    <string name="or_continue_with">or continue with</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="or_sign_up_with">or sign up with</string>
+    <string name="password">Password</string>
+    <string name="repeat_password">Repeat password</string>
 
 </resources>
