--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,12 @@
     <string name="home">Home</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome">Welcome %s</string>
     <string name="sign_in">Sign In</string>
     <string name="email">Email</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="All_fields_must_me_full">All fields must be full</string>
+    <string name="passwords_do_not_match">passwords don\'t match</string>
     <string name="sign_up">Sign Up</string>
     <string name="or">or</string>
     <string name="or_continue_with">or continue with</string>
