--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">ExpenseTracker</string>
     <string name="welcome">Sign up was successful %s</string>
+    <string name="sign_in_welcome">Sign in was successful %s</string>
     <string name="sign_in">Sign In</string>
     <string name="email">Email</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
@@ -25,9 +26,25 @@
     <string name="sell">sell</string>
     <string name="price">%s₾</string>
     <string name="name">tribe name</string>
+    <string name="description">description</string>
     <string name="profile">profile</string>
     <string name="create">Create</string>
     <string name="log_out">log out</string>
     <string name="manage_tribe">Manage Tribe</string>
     <string name="create_tribe">Create Tribe</string>
+    <string name="cant_create">you need to leave tribe to create new one</string>
+    <string name="completed">Completed ?</string>
+
+    <string name="dialog">TribeDialog</string>
+    <string name="token">token</string>
+    <string name="user">user</string>
+    <string name="tribes">tribes</string>
+    <string name="tribeId">tribeId</string>
+    <string name="notInTribe">you need to be in the tribe to manage one</string>
+    <string name="Key1">requestKeys</string>
+    <string name="key2">bundleKeys</string>
+    <string name="key3">requestKey</string>
+    <string name="key4">bundleKey</string>
+    <string name="error">error</string>
+    <string name="tribe_url">https://expensetracker-9f76c-default-rtdb.firebaseio.com/</string>
 </resources>
